# dash-mcp-server

./: CLIENT_SETUP.md  pyproject.toml
src/dash_mcp_server/: server.py
