[project]
name = "dash-mcp-server"
version = "1.0.0"
description = "MCP server for Dash, the macOS documentation browser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.13.1",
    "pydantic>=2.11.7",
    "httpx>=0.28.1",
    "markdownify>=0.13.0",
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dash_mcp_server"]

[project.scripts]
dash-mcp-server = "dash_mcp_server:main"